# RustEng

./: Cargo.toml
source/: ini.toml
source/script/: ky01.reg  ky05.reg
src/: error.rs  main.rs  run.rs  script.rs
src/config/: extra.rs  initialize.rs  mod.rs
src/executor/: executor.rs
src/media/: mod.rs  player.rs  video_player.rs
src/parser/: parser.rs
src/ui/: ui.rs
ui/: main_window.slint
ui/components/: story.slint
ui/components/common/: figure.slint  video.slint
