[package]
name = "rusteng"
version = "0.1.0"
edition = "2021"
build = "src/ui/build.rs"

[dependencies]
ffmpeg-next = "7"
slint = "1.12.1"
rodio = "0.17"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
lazy_static = "1.5.0"

[build-dependencies]
slint-build = "1.12.1"
